<resources>
    <string name="app_name">S.O.S.</string>
    <string name="decline">Decline</string>
    <string name="show">Show</string>
    <string name="desc">Description</string>
    <string name="time">Time</string>
    <string name="mapString">MAP</string>
    <string name="acceptString">accept</string>
    <string name="declineString">DECLINE</string>
    <string name="sendingMessages">Sending Messages...</string>
    <string name="helpMessages">Help is on the way!!!</string>





</resources>
