<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.janedoe.sos.MainActivity">

    <TextView
        android:id="@+id/desc"
        android:text="@string/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/timetext"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <!--RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time"
        android:id="@+id/relativeLayout">

    </RelativeLayout android:layout_below="@+id/relativeLayout"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:id="@+id/show"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="acceptEvent"

        />

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:id="@+id/decline"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/show"
        android:onClick="declineEvent"
        /-->


</RelativeLayout>
