<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical"

    tools:context="com.janedoe.sos.HelperMainScreen">

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:minHeight="60dp"
        android:id="@+id/mapButton"
        android:text="@string/mapString"
        android:onClick="map"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInHelperScreen"
        android:textColor="#000000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateInHelperScreen"
        android:textAlignment="viewEnd"
        android:gravity="end"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/eventPhoto"
        android:src="@mipmap/avatar_m"
        android:layout_centerInParent="true"
        android:layout_weight="1"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventPhoto"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/acceptButton1"
            android:text="@string/acceptString"
            android:onClick="acceptClick"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="#00cc00"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/declineButton1"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/declineString"
            android:background="#ff0000"/>

    </LinearLayout>





</LinearLayout>
